--- a/Bouncing Video/package.json
+++ b/Bouncing Video/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "devDependencies": {
     "async": "^3.2.6",
+    "browser-sync": "^3.0.3",
     "eslint": "^9.17.0",
     "gulp": "^5.0.0"
   }
